@@ -1,6 +1,7 @@
 Date	Added
 =======
 2005/10/20
+	* Fixed monster_ai&1 doing the opposite of what it should do. [Skotlex]
 	* Rewrote the skill unit reiteration code so that it'll work with any AoE
 	  skill that is set to not reiterate in skill_unit_db.txt, when no
 	  reiteration is set, the skill cannot be stacked with itself, but it can
